# blocxxi

./: .clang-format  .clang-tidy  .clangd.in  .editorconfig  .gersemirc  .gitattributes  .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  .travis.yml  .versionrc.json  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile.in  README.md  ROADMAP.md  cmake_command  conan-settings_user.yml  conanfile.py  init.ps1
codec/: CMakeLists.txt  README.md
codec/doc/: conf.py.in  index.rst  license.rst
codec/include/codec/: base16.h
codec/src/: base16.cpp
codec/test/: CMakeLists.txt  base16_test.cpp  main.cpp
common/: CMakeLists.txt
common/cmake/: BuildHelpers.cmake
common/include/common/: assert.h  config.h  logging.h  non_copiable.h  platform.h
common/src/: assert.cpp  logging.cpp
common/test/: CMakeLists.txt  assert_test.cpp  logging_test.cpp
crypto/: CMakeLists.txt  README.md  config.pc.in
crypto/doc/api/: codec.rst
crypto/include/crypto/: config.h.in  hash.h  keypair.h  random.h
crypto/src/: hash.cpp  keypair.cpp  random.cpp
crypto/test/: CMakeLists.txt  hash_test.cpp  keypair_test.cpp
nat/: CMakeLists.txt  README.md
nat/doc/: index.rst
nat/include/nat/: error.h  nat.h  port_mapper.h  upnp_port_mapper.h
nat/src/: error.cpp  nat.cpp  upnp_port_mapper.cpp
nat/test/: CMakeLists.txt  main.cpp  portfwd_test.cpp
ndagent/: CMakeLists.txt
ndagent/config/: display.yaml  imgui_dock.layout
ndagent/src/: console_runner.cpp  console_runner.h  fsl.cpp  imgui_impl_opengl3.cpp  imgui_runner.cpp  imgui_runner.h  main.cpp  runner_base.h
ndagent/src/fonts/: Roboto-Black.cpp  Roboto-BlackItalic.cpp  Roboto-Bold.cpp  Roboto-BoldItalic.cpp  Roboto-Italic.cpp  Roboto-Light.cpp  Roboto-LightItalic.cpp  Roboto-Medium.cpp  Roboto-MediumItalic.cpp  Roboto-Regular.cpp  Roboto-Thin.cpp  Roboto-ThinItalic.cpp  fonts.h
ndagent/src/imgui/: glad.c  imgui_dock.cpp  imgui_dock.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.h
ndagent/src/ui/: abstract_application.h  application.cpp  application.h  application_base.cpp  application_base.h  debug_ui.h  theme.cpp  theme.h
ndagent/src/ui/fonts/: Inconsolata-Bold.cpp  Inconsolata-Regular.cpp  Roboto-Black.cpp  Roboto-BlackItalic.cpp  Roboto-Bold.cpp  Roboto-BoldItalic.cpp  Roboto-Italic.cpp  Roboto-Light.cpp  Roboto-LightItalic.cpp  Roboto-Medium.cpp  Roboto-MediumItalic.cpp  Roboto-Regular.cpp  Roboto-Thin.cpp  Roboto-ThinItalic.cpp  fonts.h  material_design_icons.cpp
ndagent/src/ui/kademlia/: debug_ui.h  routing.cpp
ndagent/src/ui/log/: settings.cpp  sink.cpp  sink.h
ndagent/src/ui/style/: theme.cpp  theme.h  theme_impl.h
p2p/: CMakeLists.txt  README.md
p2p/doc/: conf.py.in  index.rst
p2p/examples/: CMakeLists.txt
p2p/examples/simple-node/: CMakeLists.txt  main.cpp
p2p/examples/utils/: console_runner.cpp  console_runner.h  runner_base.h
p2p/include/p2p/kademlia/: boost_asio.h  buffer.h  channel.h  endpoint.h  engine.h  error.h  kbucket.h  key.h  message.h  message_serializer.h  network.h  node.h  parameters.h  response_dispatcher.h  routing.h  session.h  timer.h  value_store.h
p2p/src/kademlia/: error.cpp  error_impl.cpp  kbucket.cpp  message.cpp  message_serializer.cpp  node.cpp  routing.cpp  timer.cpp
p2p/src/temp/: peer.h
p2p/test/: CMakeLists.txt  channel_test.cpp  kbucket_test.cpp  network_test.cpp  node_test.cpp  response_dispatcher_test.cpp  routingtable_test.cpp  simulation.cpp  timer_test.cpp
src/Blocxxi/: CMakeLists.txt
src/Blocxxi/Bitcoin/: CMakeLists.txt  adapter.cpp  adapter.h  api_export.h  ingestion.cpp  ingestion.h
src/Blocxxi/Bitcoin/Test/: CMakeLists.txt  adapter_test.cpp  ingestion_test.cpp
src/Blocxxi/Chain/: CMakeLists.txt  api_export.h  kernel.cpp  kernel.h
src/Blocxxi/Chain/Test/: CMakeLists.txt  kernel_test.cpp  main.cpp
src/Blocxxi/Codec/: CMakeLists.txt  api_export.h  base16.cpp  base16.h  bencode.cpp  bencode.h
src/Blocxxi/Codec/Test/: CMakeLists.txt  base16_test.cpp  bencode_test.cpp  main.cpp
src/Blocxxi/Core/: CMakeLists.txt  api_export.h  event_record.cpp  event_record.h  primitives.cpp  primitives.h  result.cpp  result.h
src/Blocxxi/Core/Test/: CMakeLists.txt  event_record_test.cpp  primitives_test.cpp
src/Blocxxi/Crypto/: CMakeLists.txt  api_export.h  hash.cpp  hash.h  keypair.cpp  keypair.h  random.cpp  random.h  signature.cpp  signature.h
src/Blocxxi/Crypto/Test/: CMakeLists.txt  hash_test.cpp  keypair_test.cpp  signature_test.cpp
src/Blocxxi/Examples/: CMakeLists.txt
src/Blocxxi/Examples/bitcoin-event-reader/: CMakeLists.txt  main.cpp
src/Blocxxi/Examples/bitcoin-mempool-analyzer/: CMakeLists.txt  main.cpp
src/Blocxxi/Examples/bitcoin-observer/: CMakeLists.txt  main.cpp
src/Blocxxi/Examples/hello-plugin/: CMakeLists.txt  main.cpp
src/Blocxxi/Examples/local-custom-chain/: CMakeLists.txt  main.cpp
src/Blocxxi/Nat/: CMakeLists.txt  api_export.h  error.cpp  error.h  nat.cpp  nat.h  port_mapper.h  upnp_port_mapper.cpp  upnp_port_mapper.h
src/Blocxxi/Nat/Test/: CMakeLists.txt  portfwd_test.cpp
src/Blocxxi/Node/: CMakeLists.txt  api_export.h  node.cpp  node.h  service.h
src/Blocxxi/Node/Test/: CMakeLists.txt  main.cpp  node_test.cpp
src/Blocxxi/P2P/: CMakeLists.txt  api_export.h  event_dht.cpp  event_dht.h
src/Blocxxi/P2P/Examples/: CMakeLists.txt
src/Blocxxi/P2P/Test/: CMakeLists.txt  (+16 more)
src/Blocxxi/Storage/: CMakeLists.txt  api_export.h  file_store.cpp  file_store.h  in_memory_store.cpp  in_memory_store.h
src/Nova/: CMakeLists.txt
src/Nova/Base/: AlwaysFalse.h  CMakeLists.txt  Compilers.h  Concepts.h  Crtp.h  Endian.h  EnumIndexedArray.h  Finally.h  Hash.h  Logging.h  Macros.h  NamedType.h  NoInline.h  NoStd.h  ObserverPtr.h  Platforms.h  Resource.h  ResourceHandle.h  ResourceHandle.natvis  ResourceTable.h  Result.h  ReturnAddress.h  ScopeGuard.h  Sha256.cpp  Sha256.h  StateMachine.h  StaticVector.h  StringTypes.h  StringUtils.h  TypeList.h  Unreachable.h  Uuid.cpp  Uuid.h  VariantHelpers.h  api_export.h
src/Nova/Testing/: CMakeLists.txt  GTest.h  ScopedLogCapture.h  gtest_main.cpp
(+237 files in other folders)
